[project]
name = "test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a3mio>=0.0.1",
    "biopython>=1.86",
    "juliacall>=0.9.31",
    "pymol-open-source>=3.2.0a0",
]

[[tool.uv.index]]
url = "https://mirrors.bfsu.edu.cn/pypi/web/simple"
default = true

[tool.uv.workspace]
members = ["species2"]
